@@ -6,11 +6,6 @@ rem Start/Stop Script for the MyCollab Server
 rem
 rem Environment Variable Prerequisites
 rem
-rem   MYCOLLAB_HOME   May point at your MyCollab "build" directory.
-rem   MYCOLLAB_OUT    (Optional) Full path to a file where stdout and stderr
-rem                   will be redirected.
-rem                   Default is $CATALINA_BASE/logs/catalina.out
-rem   MYCOLLAB_PORT   Port of server to allow user access to server
 rem   MYCOLLAB_OPTS   (Optional) Java runtime options used when the "start",
 rem                    "stop" command is executed.
 rem                   Include here and not in JAVA_OPTS all options, that should
@@ -22,8 +17,8 @@ rem   JAVA_HOME       Must point at your Java Development Kit installation.
 rem                   Required to run the with the "debug" argument.
 rem ---------------------------------------------------------------------------
 
-set MYCOLLAB_PORT=8080
 set _RUNJAVA=java
+set MYCOLLAB_OPTS=-noverify -server -Xms394m -Xmx768m -XX:NewSize=128m -XX:+DisableExplicitGC -XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC
 
 rem Suppress Terminate batch job on CTRL+C
 if not ""%1"" == ""run"" goto mainEntry
@@ -43,14 +38,12 @@ del /Q "%TEMP%\%~nx0.run" >NUL 2>&1
 rem Guess MYCOLLAB_HOME if not defined
 set "CURRENT_DIR=%cd%"
 if not "%MYCOLLAB_HOME%" == "" goto gotHome
-set "MYCOLLAB_HOME=%CURRENT_DIR%\.."
-if exist "%MYCOLLAB_HOME%\mycollab.bat" goto okHome
 cd ..
 set "MYCOLLAB_HOME=%cd%"
 cd "%CURRENT_DIR%"
 :gotHome
 
-if exist "%MYCOLLAB_HOME%\mycollab.bat" goto okHome
+if exist "%MYCOLLAB_HOME%\bin\mycollab.bat" goto okHome
 echo The MYCOLLAB_HOME environment variable is not defined correctly
 echo This environment variable is needed to run this program
 goto end
@@ -61,11 +54,10 @@ rem ----- Execute The Requested Command ---------------------------------------
 echo Using MYCOLLAB_HOME:   "%MYCOLLAB_HOME%"
 
 set _EXECJAVA=%_RUNJAVA%
-set ACTION=--port %MYCOLLAB_PORT%
 
 
-if ""%1"" == ""start"" goto doStart
-if ""%1"" == ""stop"" goto doStop
+if ""%1"" == ""--start"" goto doStart
+if ""%1"" == ""--stop"" goto doStop
 
 echo Usage:  mycollab ( commands ... )
 echo commands:
@@ -77,7 +69,7 @@ goto end
 shift
 if not "%OS%" == "Windows_NT" goto noTitle
 if "%TITLE%" == "" set TITLE=MyCollab
-set _EXECJAVA=start "%TITLE%" %_RUNJAVA%
+set _EXECJAVA=start "%TITLE%" %_RUNJAVA% %MYCOLLAB_OPTS%
 goto gotTitle
 :noTitle
 set _EXECJAVA=start %_RUNJAVA%
@@ -89,20 +81,11 @@ goto execCmd
 shift
 goto execCmd
 
-
 :execCmd
-rem Get remaining unshifted command line arguments and save them in the
-set CMD_LINE_ARGS=
-:setArgs
-if ""%1""=="""" goto doneSetArgs
-set CMD_LINE_ARGS=%CMD_LINE_ARGS% %1
-shift
-goto setArgs
-:doneSetArgs
 
 rem Execute Java with the applicable properties
 cd ..
-%_EXECJAVA% -jar executor.jar  %ACTION%
+%_EXECJAVA% -jar executor.jar %* %MYCOLLAB_OPTS% -Dserver.port=%MYCOLLAB_PORT%
 goto end
 
 :end
